[package]
name = "date"
version = "0.1.0"
authors = ["hcpl <hcpl.prog@gmail.com>"]

[lib]
name = "uu_date"
path = "date.rs"

[dependencies]
chrono = "0.3.1"
clap = "2.24.2"
errno = "0.2.3"
error-chain = "0.10.0"
libc = "0.2.23"
nom = "3.0.0"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.2.8"

[[bin]]
name = "date"
path = "main.rs"
